margin alignment fixed

--- a/app/assets/stylesheets/pages/_project_show.scss
+++ b/app/assets/stylesheets/pages/_project_show.scss
@@ -55,3 +55,7 @@
   border-radius: 5px;
   margin-bottom: 25px;
 }
+
+.project-show-content-row {
+  margin-left: -45px;
+}
